{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 111,
  "lineage": "fea60578-354b-b307-13df-811aa91b8956",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064ac213b11ba9147",
            "association_id": "eipassoc-06eb515b917b07912",
            "domain": "vpc",
            "id": "eipalloc-064ac213b11ba9147",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-033606c050af9606f",
            "private_dns": "ip-10-10-10-135.eu-central-1.compute.internal",
            "private_ip": "10.10.10.135",
            "public_dns": "ec2-3-126-168-243.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.168.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01025e5b3a3dcd425",
            "association_id": "eipassoc-0c95f4a619a05c02f",
            "domain": "vpc",
            "id": "eipalloc-01025e5b3a3dcd425",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ec49f464c4d02242",
            "private_dns": "ip-10-10-20-33.eu-central-1.compute.internal",
            "private_ip": "10.10.20.33",
            "public_dns": "ec2-18-159-251-251.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.251.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:389860772464:instance/i-0888aea31a320aab2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0888aea31a320aab2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d708f3f9aa6f64d",
            "private_dns": "ip-10-10-10-58.eu-central-1.compute.internal",
            "private_ip": "10.10.10.58",
            "public_ip": "18.185.87.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0726f59881035b424",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0344c29b0de463785",
            "tags": {
              "Name": "notejam-deployment-bastion"
            },
            "tags_all": {
              "Name": "notejam-deployment-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02235d47370ee30b5"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:internet-gateway/igw-0a7f99c0f192f7879",
            "id": "igw-0a7f99c0f192f7879",
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment"
            },
            "tags_all": {
              "Name": "notejam-deployment"
            },
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064ac213b11ba9147",
            "connectivity_type": "public",
            "id": "nat-02ddced3c919d6bce",
            "network_interface_id": "eni-033606c050af9606f",
            "private_ip": "10.10.10.135",
            "public_ip": "3.126.168.243",
            "subnet_id": "subnet-0344c29b0de463785",
            "tags": {
              "Name": "notejam-deployment-1"
            },
            "tags_all": {
              "Name": "notejam-deployment-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw1",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01025e5b3a3dcd425",
            "connectivity_type": "public",
            "id": "nat-0e0c2001bb754cb75",
            "network_interface_id": "eni-0ec49f464c4d02242",
            "private_ip": "10.10.20.33",
            "public_ip": "18.159.251.251",
            "subnet_id": "subnet-0b8f1e48e7da99e9e",
            "tags": {
              "Name": "notejam-deployment-2"
            },
            "tags_all": {
              "Name": "notejam-deployment-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw2",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a7f99c0f192f7879",
            "id": "r-rtb-064b72452117818991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064b7245211781899",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet1_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:route-table/rtb-0ce32f27f4f732c41",
            "id": "rtb-0ce32f27f4f732c41",
            "owner_id": "389860772464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ddced3c919d6bce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "notejam-deployment-private-subnet1-egress"
            },
            "tags_all": {
              "Name": "notejam-deployment-private-subnet1-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "aws_eip.nat_gw1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:route-table/rtb-0393c3eab3fe036f1",
            "id": "rtb-0393c3eab3fe036f1",
            "owner_id": "389860772464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0c2001bb754cb75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "notejam-deployment-private-subnet2-egress"
            },
            "tags_all": {
              "Name": "notejam-deployment-private-subnet2-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw2",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6e4aba06f68513c",
            "route_table_id": "rtb-0ce32f27f4f732c41",
            "subnet_id": "subnet-09772d39d559bdb1c"
          },
          "dependencies": [
            "aws_eip.nat_gw1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_subnet1_egress",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0897f345e98507728",
            "route_table_id": "rtb-0393c3eab3fe036f1",
            "subnet_id": "subnet-01f0d5da51893ab3e"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_eip.nat_gw2",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw2",
            "aws_route_table.private_subnet2_egress",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:security-group/sg-02235d47370ee30b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "SSH to VPC instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-02235d47370ee30b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211206124050182200000002",
            "name_prefix": "terraform-",
            "owner_id": "389860772464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notejam-deployment-bastion"
            },
            "tags_all": {
              "Name": "notejam-deployment-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:security-group/sg-0f3024bfdde3b3bf3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f3024bfdde3b3bf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.11.0/24",
                  "10.10.21.0/24"
                ],
                "description": "Incoming access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20211206124050174400000001",
            "name_prefix": "terraform-",
            "owner_id": "389860772464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notejam-deployment-database"
            },
            "tags_all": {
              "Name": "notejam-deployment-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:security-group/sg-053f6fcb9d5548822",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053f6fcb9d5548822",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All other inbound traffic",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Inbound traffic from other workers",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02235d47370ee30b5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211206124051411100000003",
            "name_prefix": "terraform-",
            "owner_id": "389860772464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notejam-deployment-workers"
            },
            "tags_all": {
              "Name": "notejam-deployment-workers"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:subnet/subnet-09772d39d559bdb1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-09772d39d559bdb1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment-private1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "notejam-deployment-private1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:subnet/subnet-01f0d5da51893ab3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.21.0/24",
            "id": "subnet-01f0d5da51893ab3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment-private2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "notejam-deployment-private2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:subnet/subnet-0344c29b0de463785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0344c29b0de463785",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment-public1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "notejam-deployment-public1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:subnet/subnet-0b8f1e48e7da99e9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-0b8f1e48e7da99e9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment-public2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "notejam-deployment-public2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08362c56a7734b076"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:389860772464:vpc/vpc-08362c56a7734b076",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b88c201275806bd8",
            "default_route_table_id": "rtb-064b7245211781899",
            "default_security_group_id": "sg-07f7b7ed593d8d038",
            "dhcp_options_id": "dopt-42c9de29",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08362c56a7734b076",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064b7245211781899",
            "owner_id": "389860772464",
            "tags": {
              "Name": "notejam-deployment"
            },
            "tags_all": {
              "Name": "notejam-deployment"
            }
          }
        }
      ]
    }
  ]
}